--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Meet the Team</h1>
         <ul class="people-list">
-            <li>John Doe</li>
+            <li>pauline mwaura</li>
             <li>Jane Smith</li>
             <li>Michael Johnson</li>
             <li>Sarah Brown</li>
