--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Meet the Team</h1>
         <ul class="people-list">
             <li>pauline mwaura</li>
-            <li>Jane Smith</li>
+            <li>lester watosia</li>
             <li>Michael Johnson</li>
             <li>Sarah Brown</li>
         </ul>
