--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="people-list">
             <li>pauline mwaura</li>
             <li>lester watosia</li>
-            <li>Michael Johnson</li>
+            <li>Elisha Kiplangat</li>
             <li>Sarah Brown</li>
         </ul>
     </div>
