--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li>pauline mwaura</li>
             <li>lester watosia</li>
             <li>Elisha Kiplangat</li>
-            <li>Sarah Brown</li>
+            <li>Elijah Kimani</li>
         </ul>
     </div>
 </body>
